force-app/main/default/objects/Debt_Rule__c/Debt_Rule__c.object-meta.xml
<CustomObject>
    <label>Debt Rule</label>
    <nameField>
        <label>Debt Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Debt Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>