force-app/main/default/objects/Debt_Rule__c/fields/Rule_Description__c.field-meta.xml
<CustomField>
    <fullName>Rule_Description__c</fullName>
    <label>Rule Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>