force-app/main/default/objects/Debt_Rule__c/fields/Suggested_Fix__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Fix__c</fullName>
    <label>Suggested Fix</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>