force-app/main/default/objects/Debt_Rule__c/fields/Target_Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Component_Type__c</fullName>
    <label>Target Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Validation Rule</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Page Layout</fullName>
            </value>
            <value>
                <fullName>Permission Set</fullName>
            </value>
            <value>
                <fullName>Experience Cloud</fullName>
            </value>
            <value>
                <fullName>SAMPLE RECORDS</fullName>
            </value>
            <value>
                <fullName>Flow Missing Description</fullName>
            </value>
            <value>
                <fullName>Validation Rule Has Unclear Error Message</fullName>
            </value>
            <value>
                <fullName>Custom Field Missing Help Text</fullName>
            </value>
            <value>
                <fullName>Inactive Flow Older Than 90 Days</fullName>
            </value>
            <value>
                <fullName>Unused Report Older Than 180 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>